--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="splash_icon_width">220dp</dimen>
     <dimen name="splash_icon_height">120dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
