--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".home.presentation.view.fragment.ListUsersFragment">
+    tools:context=".home.presentation.view.fragment.ListUsersViewFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_item_container"
