--- a/app/src/main/res/layout/list_users_adapter.xml
+++ b/app/src/main/res/layout/list_users_adapter.xml
@@ -1,31 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/list_general_margin">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imageUser"
+        android:layout_width="@dimen/list_user_image_width"
+        android:layout_height="@dimen/list_user_image_height"
+        android:adjustViewBounds="true"
+        android:paddingTop="@dimen/list_general_margin"
+        app:srcCompat="@mipmap/ic_launcher" />
+
+    <TextView
+        android:id="@+id/textName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/list_general_margin">
+        android:layout_margin="@dimen/list_general_margin"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="@dimen/user_list_name_size"
+        tools:text="UserName" />
 
-        <ImageView
-            android:id="@+id/imageUser"
-            android:layout_width="@dimen/list_user_image_width"
-            android:layout_height="@dimen/list_user_image_height"
-            android:adjustViewBounds="true"
-            android:paddingTop="@dimen/list_general_margin"
-            app:srcCompat="@mipmap/ic_launcher" />
-
-        <TextView
-            android:id="@+id/textName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/list_general_margin"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textSize="24sp"
-            tools:text="UserName" />
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
