--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="list_general_margin">10dp</dimen>
     <dimen name="list_user_image_width">80dp</dimen>
     <dimen name="list_user_image_height">80dp</dimen>
+    <dimen name="user_list_name_size">24sp</dimen>
 </resources>
