--- a/app/src/main/res/layout/list_users_adapter.xml
+++ b/app/src/main/res/layout/list_users_adapter.xml
@@ -1,26 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="@dimen/list_general_margin">
+    android:layout_marginBottom="@dimen/card_default_padding"
+    android:padding="@dimen/list_general_margin"
+    card_view:cardCornerRadius="@dimen/card_corner_radius"
+    card_view:cardUseCompatPadding="true">
 
-    <ImageView
-        android:id="@+id/imageUser"
-        android:layout_width="@dimen/list_user_image_width"
-        android:layout_height="@dimen/list_user_image_height"
-        android:adjustViewBounds="true"
-        android:paddingTop="@dimen/list_general_margin"
-        app:srcCompat="@mipmap/ic_launcher" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/list_general_margin"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="@dimen/user_list_name_size"
-        tools:text="UserName" />
+        <ImageView
+            android:id="@+id/imageUser"
+            android:layout_width="@dimen/list_user_image_width"
+            android:layout_height="@dimen/list_user_image_height"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="@dimen/list_general_margin"
+            android:layout_centerHorizontal="true"
+            android:adjustViewBounds="true"
+            app:srcCompat="@mipmap/ic_launcher" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/textName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/imageUser"
+            android:gravity="center_horizontal"
+            android:paddingTop="@dimen/list_general_margin"
+            android:paddingBottom="@dimen/list_general_margin"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="@dimen/user_list_name_size"
+            tools:text="UserName" />
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
