Change BaseView methods, Create BaseModel class, organize builders.

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.presentation.view.activity.HomeScreenActivity"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:context=".home.presentation.view.activity.HomeScreenActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
