--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -17,7 +17,7 @@
             android:layout_width="@dimen/detail_user_image_size"
             android:layout_height="@dimen/detail_user_image_size"
             android:layout_weight="1"
-            app:srcCompat="@mipmap/ic_launcher"
+            app:srcCompat="@drawable/ic_placeholder"
             tools:ignore="ContentDescription" />
 
         <LinearLayout
@@ -104,6 +104,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:listitem="@layout/list_repository_adapter" />
 
 </LinearLayout>
