--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="card_corner_radius">8dp</dimen>
     <dimen name="card_default_padding">16dp</dimen>
     <dimen name="default_separator_margin">10dp</dimen>
-    <dimen name="detail_user_image_size">60dp</dimen>
+    <dimen name="detail_user_image_size">70dp</dimen>
+    <dimen name="divider_height">2dp</dimen>
 </resources>
