--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,11 @@
 
     <style name="splash_theme" parent="Theme.AppCompat.Light.NoActionBar" />
 
+    <style name="divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
