--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="@dimen/list_general_margin"
+            android:layout_marginStart="@dimen/list_general_margin"
             android:layout_toEndOf="@+id/imageView"
             tools:text="@string/tv_detail_user_name" />
 
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtUserName"
-            android:layout_marginLeft="@dimen/list_general_margin"
+            android:layout_marginStart="@dimen/list_general_margin"
             android:layout_toEndOf="@+id/imageView"
             tools:text="@string/tv_detail_location" />
 
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtLocation"
-            android:layout_marginLeft="@dimen/list_general_margin"
+            android:layout_marginStart="@dimen/list_general_margin"
             android:layout_toEndOf="@+id/imageView"
             android:text="@string/tv_detail_company"
             tools:text="@string/tv_detail_company" />
